[package]
name = "hot-restart"
version = "0.2.3"
edition = "2024"
authors = ["root@ltpp.vip"] 
license = "MIT"
description = """A hot reboot lib project."""
keywords = ["hot", "restart", "cargo", "watch", "file"]
repository = "https://github.com/eastspire/hot-restart.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
